--- a/100+Python-challenging-programming-exercises/21-30.ipynb
+++ b/100+Python-challenging-programming-exercises/21-30.ipynb
@@ -86,6 +86,274 @@
     "for w in words:\n",
     "    print(\"%s:%d\" % (w, freq[w]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: Write a method which can calculate square value of number\n",
+    "\n",
+    "Hints: Using the ** operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square(num):\n",
+    "    return num ** 2\n",
+    "print(square(2))\n",
+    "print(square(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python has many built-in functions, and if you do not know how to use it, you can read document online or find some books. But Python has a built-in document function for every built-in functions.\n",
+    "Please write a program to print some Python built-in functions documents, such as abs(), int(), raw_input()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Return the absolute value of the argument.\n",
+      "int([x]) -> integer\n",
+      "int(x, base=10) -> integer\n",
+      "\n",
+      "Convert a number or string to an integer, or return 0 if no arguments\n",
+      "are given.  If x is a number, return x.__int__().  For floating point\n",
+      "numbers, this truncates towards zero.\n",
+      "\n",
+      "If x is not a number or if base is given, then x must be a string,\n",
+      "bytes, or bytearray instance representing an integer literal in the\n",
+      "given base.  The literal can be preceded by '+' or '-' and be surrounded\n",
+      "by whitespace.  The base defaults to 10.  Valid bases are 0 and 2-36.\n",
+      "Base 0 means to interpret the base from the string as an integer literal.\n",
+      ">>> int('0b100', base=0)\n",
+      "4\n",
+      "Forward raw_input to frontends\n",
+      "\n",
+      "        Raises\n",
+      "        ------\n",
+      "        StdinNotImplementedError if active frontend doesn't support stdin.\n",
+      "        \n",
+      "4\n",
+      "Return the square value of the input number.\n",
+      "    \n",
+      "    The input number must be integer.\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(abs.__doc__)\n",
+    "print(int.__doc__)\n",
+    "print(input.__doc__)\n",
+    "\n",
+    "def square(num):\n",
+    "    '''Return the square value of the input number.\n",
+    "    \n",
+    "    The input number must be integer.\n",
+    "    '''\n",
+    "    return num ** 2\n",
+    "\n",
+    "print(square(2))\n",
+    "print(square.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: Define a class, which have a class parameter and have a same instance parameter.\n",
+    "\n",
+    "Hints: Define a instance parameter, need add it in init method You can init a object with construct parameter or set the value later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Person name is Jeffrey\n",
+      "Person name is Nico\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    # Define the class parameter \"name\"\n",
+    "    name = \"Person\"\n",
+    "    \n",
+    "    def __init__(self, name = None):\n",
+    "        # self.name is the instance parameter\n",
+    "        self.name = name\n",
+    "\n",
+    "jeffrey = Person(\"Jeffrey\")\n",
+    "print(\"%s name is %s\" % (Person.name, jeffrey.name))\n",
+    "\n",
+    "nico = Person()\n",
+    "nico.name = \"Nico\"\n",
+    "print(\"%s name is %s\" % (Person.name, nico.name))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function which can compute the sum of two numbers.\n",
+    "\n",
+    "Hints: Define a function with two numbers as arguments. You can compute the sum in the function and return the value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def som(num1,num2):\n",
+    "    num3 = num1 + num2\n",
+    "    print(num3)\n",
+    "som(5,3)\n",
+    "\n",
+    "def SumFunction(number1, number2):\n",
+    "\treturn number1+number2\n",
+    "\n",
+    "print(SumFunction(1,2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function that can convert a integer into a string and print it in console."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def con(a):\n",
+    "    return str(a)\n",
+    "con(1)\n",
+    "\n",
+    "def printValue(n):\n",
+    "    print(str(n))\n",
+    "\n",
+    "printValue(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function that can receive two integral numbers in string form and compute their sum and then print it in console."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def str_sum(num1,num2):\n",
+    "    return int(num1) + int(num2)\n",
+    "str_sum(\"5\",\"2\")\n",
+    "\n",
+    "def printValue(s1,s2):\n",
+    "    print(int(s1)+int(s2))\n",
+    "\n",
+    "printValue(\"3\",\"4\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function that can accept two strings as input and concatenate them and then print it in console."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'RahulVaidya'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def con_str(a,b):\n",
+    "    return a + b\n",
+    "con_str('Rahul','Vaidya')\n",
+    "\n",
+    "def printValue(s1,s2):\n",
+    "    print(s1+s2)\n",
+    "\n",
+    "printValue(\"3\",\"4\") #34"
+   ]
   }
  ],
  "metadata": {
