--- a/100+Python-challenging-programming-exercises/31-40.ipynb
+++ b/100+Python-challenging-programming-exercises/31-40.ipynb
@@ -117,6 +117,57 @@
     "        \n",
     "printDict()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function which can print a dictionary where the keys are numbers between 1 and 20 (both included) and the values are square of keys."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1,\n",
+       " 2: 4,\n",
+       " 3: 9,\n",
+       " 4: 16,\n",
+       " 5: 25,\n",
+       " 6: 36,\n",
+       " 7: 49,\n",
+       " 8: 64,\n",
+       " 9: 81,\n",
+       " 10: 100,\n",
+       " 11: 121,\n",
+       " 12: 144,\n",
+       " 13: 169,\n",
+       " 14: 196,\n",
+       " 15: 225,\n",
+       " 16: 256,\n",
+       " 17: 289,\n",
+       " 18: 324,\n",
+       " 19: 361,\n",
+       " 20: 400}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    d = {}\n",
+    "    for i in range(1,20+1):\n",
+    "        d[i] = i*i\n",
+    "    return d\n",
+    "fun()"
+   ]
   }
  ],
  "metadata": {
