--- a/100+Python-challenging-programming-exercises/31-40.ipynb
+++ b/100+Python-challenging-programming-exercises/31-40.ipynb
@@ -166,6 +166,269 @@
     "    for i in range(1,20+1):\n",
     "        d[i] = i*i\n",
     "    return d\n",
+    "fun()\n",
+    "def printDict():\n",
+    "\td=dict()\n",
+    "\tfor i in range(1,21):\n",
+    "\t\td[i]=i**2\n",
+    "\tprint(d)\n",
+    "\n",
+    "printDict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function which can generate a dictionary where the keys are numbers between 1 and 20 (both included) and the values are square of keys. The function should just print the values only.\n",
+    "\n",
+    "Hints: Use dict[key]=value pattern to put entry into a dictionary. Use ** operator to get power of a number. Use range() for loops. Use keys() to iterate keys in the dictionary. Also we can use item() to get key/value pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n",
+      "121\n",
+      "144\n",
+      "169\n",
+      "196\n",
+      "225\n",
+      "256\n",
+      "289\n",
+      "324\n",
+      "361\n",
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    d = {}\n",
+    "    for i in range(1,20+1):\n",
+    "        d[i] = i*i\n",
+    "    for (key,value) in d.items():\n",
+    "        print(value)\n",
+    "fun()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function which can generate a dictionary where the keys are numbers between 1 and 20 (both included) and the values are square of keys. The function should just print the keys only."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    d = {}\n",
+    "    for i in range(1,20+1):\n",
+    "        d[i] = i*i\n",
+    "    for (key,value) in d.items():\n",
+    "        print(key)\n",
+    "fun()\n",
+    "\n",
+    "def printDict():\n",
+    "\td=dict()\n",
+    "\tfor i in range(1,21):\n",
+    "\t\td[i]=i**2\n",
+    "\tfor k in d.keys():\t\n",
+    "\t\tprint(k)\n",
+    "\n",
+    "printDict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function which can generate and print a list where the values are square of numbers between 1 and 20 (both included)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 4,\n",
+       " 9,\n",
+       " 16,\n",
+       " 25,\n",
+       " 36,\n",
+       " 49,\n",
+       " 64,\n",
+       " 81,\n",
+       " 100,\n",
+       " 121,\n",
+       " 144,\n",
+       " 169,\n",
+       " 196,\n",
+       " 225,\n",
+       " 256,\n",
+       " 289,\n",
+       " 324,\n",
+       " 361,\n",
+       " 400]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    lst = []\n",
+    "    for i in range(1,21):\n",
+    "        lst.append(i**2)\n",
+    "    return lst\n",
+    "fun()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function which can generate a list where the values are square of numbers between 1 and 20 (both included). Then the function needs to print the first 5 elements in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    lst = []\n",
+    "    for i in range(1,21):\n",
+    "        lst.append(i**2)\n",
+    "    return lst[:5]\n",
+    "fun()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function which can generate a list where the values are square of numbers between 1 and 20 (both included). Then the function needs to print the last 5 elements in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[256, 289, 324, 361, 400]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    lst = []\n",
+    "    for i in range(1,21):\n",
+    "        lst.append(i**2)\n",
+    "    return lst[-5:]\n",
+    "fun()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a function which can generate a list where the values are square of numbers between 1 and 20 (both included). Then the function needs to print all values except the first 5 elements in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361, 400]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    lst = []\n",
+    "    for i in range(1,21):\n",
+    "        lst.append(i**2)\n",
+    "    return lst[5:]\n",
     "fun()"
    ]
   }
