--- a/100+Python-challenging-programming-exercises/31-40.ipynb
+++ b/100+Python-challenging-programming-exercises/31-40.ipynb
@@ -431,6 +431,63 @@
     "    return lst[5:]\n",
     "fun()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rahul_loop(start, end):\n",
+    "    if start < end:\n",
+    "        print(start)\n",
+    "        rahul_loop(start + 1, end)\n",
+    "\n",
+    "\n",
+    "rahul_loop(1, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n",
+      "sql\n",
+      "c\n",
+      "c++\n"
+     ]
+    }
+   ],
+   "source": [
+    "langs = ['python','sql','c','c++']\n",
+    "\n",
+    "def rahul_loop(iterable):\n",
+    "    iterator = iter(iterable)\n",
+    "    while True:\n",
+    "        try:\n",
+    "            item = next(iterator)\n",
+    "        except StopIteration:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(item)\n",
+    "rahul_loop(langs)"
+   ]
   }
  ],
  "metadata": {
