--- a/100+Python-challenging-programming-exercises/41-50.ipynb
+++ b/100+Python-challenging-programming-exercises/41-50.ipynb
@@ -211,6 +211,26 @@
     "squaredNumbers = map(lambda x: x**2, li)\n",
     "print(squaredNumbers)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 6, 6, 6, 9, 9, 9, 9, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "a = [3, 4, 6, 2, 1, 9, 0, 7, 5, 8]\n",
+    "results_custom = reduce(lambda acc, x: acc + [max(x, acc[-1])], a[1:], [a[0]])\n",
+    "print(results_custom)"
+   ]
   }
  ],
  "metadata": {
