--- a/Python-Fundamentsal/python-main-topic.ipynb
+++ b/Python-Fundamentsal/python-main-topic.ipynb
@@ -118,6 +118,362 @@
     "shallow copy -> create karta hai new arrray but ye new copy nahi banata elements ka array ke andar uske wajay ye us object ko hi point karta hai(fast)<br>\n",
     "Deep Copy -> ye fully independent array and its value banata hai(slow)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are Decorators?\n",
+    "---\n",
+    "decorator higher order function hota hai jo ki another function as argument leta hai aur ek new function return karta hai.Aur ye new function original function ko alter or modify kar sakta hai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_decorator(func):\n",
+    "  def inner_deco():\n",
+    "    print(\"The addition of two odd numbers 3 and 7\")\n",
+    "    func()\n",
+    "    print(\"is always an even number\")\n",
+    "  return inner_deco"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The addition of two odd numbers 3 and 7\n",
+      "10\n",
+      "is always an even number\n"
+     ]
+    }
+   ],
+   "source": [
+    "@sum_decorator\n",
+    "def odd_add():\n",
+    "  print(3+7)\n",
+    "\n",
+    "odd_add()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are Iterators in Python?\n",
+    "---\n",
+    "In Python, an iterator is an object that allows you to iterate over collections of data, such as lists, tuples, dictionaries, and sets.\n",
+    "\n",
+    "python me iterator ek object jo ki allow karta hai collection of data p iterate karna jaise ki list, tuples,dict, aur sets.malab jitne bhi mutable type of data hai.<br>\n",
+    "python ka iterators ek well-established structure internally implement karta hai for iteration jise hum iterator protocol kehte hai.<br>\n",
+    "python ka object  jab do iterator protocol ko collectively implement karta hai to us object ko iterator consider karte hai aur un special methods ko iterator protocol kehte hai.<br>\n",
+    ".__iter__() ->\tCalled to initialize the iterator. It must return an iterator object.<br>\n",
+    ".__next__() ->\tCalled to iterate over the iterator. It must return the next value in the data stream.<br>\n",
+    "\n",
+    "**Iterator vs Iterable**\n",
+    "List,Tuple,dict,aur sets sabhi iterable objects hai.ye sabhi iterable containers hai jiske through hum iterator get karte hai.<br>\n",
+    "In sabhi objects me iter() method hota hai jiske through hum iterator get karte hai."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "mytuple = (\"apple\", \"banana\", \"cherry\")\n",
+    "myit = iter(mytuple)\n",
+    "\n",
+    "print(next(myit))\n",
+    "print(next(myit))\n",
+    "print(next(myit))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyNumbers:\n",
+    "  def __iter__(self): # iter methods se object ko iter banaye\n",
+    "    self.a = 1\n",
+    "    return self\n",
+    "\n",
+    "  def __next__(self): # next se us object ko iterator ke through iterating karnege\n",
+    "    x = self.a\n",
+    "    self.a += 1\n",
+    "    return x\n",
+    "\n",
+    "myclass = MyNumbers() #instance banaye\n",
+    "myiter = iter(myclass)\n",
+    "\n",
+    "print(next(myiter)) #next ke through iterator ke iterating ka har ek next value ko print kiye.\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iteration forever rokne ke liye hum **StopIteration** use karenge. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyNumbers:\n",
+    "  def __iter__(self):\n",
+    "    self.a = 1\n",
+    "    return self\n",
+    "\n",
+    "  def __next__(self):\n",
+    "    if self.a <= 20:\n",
+    "      x = self.a\n",
+    "      self.a += 1\n",
+    "      return x\n",
+    "    else:\n",
+    "      raise StopIteration\n",
+    "\n",
+    "myclass = MyNumbers()\n",
+    "myiter = iter(myclass)\n",
+    "\n",
+    "for x in myiter:\n",
+    "  print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are Generators in Python?\n",
+    "---\n",
+    "function ke andar agar ek ya ek se jada yield statement hai toh wo generator hai.yiled keyword pause kar deta hai current execution ko aur uske state ko save karta hai aur fir wahi se start hota hai as per requirement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_odds_generator():\n",
+    "    n=1\n",
+    "    \n",
+    "    n+=2\n",
+    "    yield n\n",
+    "    \n",
+    "    n+=2\n",
+    "    yield n \n",
+    "    \n",
+    "    n+=2\n",
+    "    yield n\n",
+    "    \n",
+    "numbers=get_odds_generator()\n",
+    "print(next(numbers))\n",
+    "print(next(numbers))\n",
+    "print(next(numbers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is garbage collection in Python?\n",
+    "---\n",
+    "process of automatic deletion of unwanted aur unused object to free the memory use hum garbage collection kehte hai."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is a zip function?\n",
+    "---\n",
+    "ye ek zip object  return karta hai, jo ki tuples ka iterator hota hai, jisme hum do ya do se jayda iterator pass kar sakte hai aur use map karke ek single object generate karta hai.isse hum values ko map karte hai."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{('Nikhil', 1), ('Astha', 2), ('Shambhavi', 3), ('Manjeet', 4)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "name = [ \"Manjeet\", \"Nikhil\", \"Shambhavi\", \"Astha\" ]\n",
+    "roll_no = [ 4, 1, 3, 2 ]\n",
+    " \n",
+    "# using zip() to map values\n",
+    "mapped = zip(name, roll_no)\n",
+    " \n",
+    "print(set(mapped))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are Pickling and Unpickling?\n",
+    "---\n",
+    "Pickling is the process of converting Python objects, such as lists, dictionaries, classes, or custom objects, into a format that can be stored or transmitted efficiently.\n",
+    "\n",
+    "This serialized format is known as a “pickle” or “pickled object.”\n",
+    "\n",
+    "Pickling matlab ye ek process hai to convert python objects jaise ki lists,dict,classes or custom objects, into a format(byte stream) jisse ki hum ise store aur transmit kar sake efficiently.ye serialized format ko picle aur pickle object kehte hai.<br>\n",
+    "\n",
+    "Unpickling  matlab serialized aur pickled object ko retrieve karna aur usko uske original form me reconstruct karna.\n",
+    "pickle.dump() -> for pickling the object<br>\n",
+    "pickle.load() -> for unpickling the object "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "data = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "with open('data.pickle', 'wb') as file:\n",
+    "    pickle.dump(data, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('data.pickle', 'rb') as file:\n",
+    "    loaded_data = pickle.load(file)\n",
+    "\n",
+    "print(loaded_data)  # Output: [1, 2, 3, 4, 5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is self in code?\n",
+    "---\n",
+    "self parameter ek reference of instance ki tarah kaam karta hai class ke liye, aur variable ko access karne me used karta hai jo ki us class ko belongs karta hai.<br>\n",
+    "self likhna koi manadetory nahi hai, ise hum jo chahe wo naam de sakte hai lekin class ke andar function me ye always first parameter hoga."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is heap memory?\n",
+    "---\n",
+    "heap memory ka wo region hai jha python object aur data structure ka memory store karta hai.heap stack ki taraj kisi bhi way me organized nahi hai.python ye heap ko memory allocate karne ke liye use karta hai."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is class and objects?\n",
+    "---\n",
+    "python me everything object hai jo ki methods ya fir any data types.<br>\n",
+    "class ek bluprint hai object constructor ka jha p hum object banate hai."
+   ]
   }
  ],
  "metadata": {
