--- a/100+Python-challenging-programming-exercises/41-50.ipynb
+++ b/100+Python-challenging-programming-exercises/41-50.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -185,51 +185,146 @@
    ],
    "source": [
     "lst = [1,2,3,4,5,6,7,8,9,10]\n",
-    "evenNumbers = list(filter(lambda x: x%2==0, li))\n",
+    "evenNumbers = list(filter(lambda x: x%2==0, lst))\n",
     "print(evenNumbers)\n",
     "\n",
     "li = [1,2,3,4,5,6,7,8,9,10]\n",
-    "evenNumbers = list(filter(lambda x: x%2==0, li))\n",
+    "evenNumbers = list(filter(lambda x: x%2==0, lst))\n",
     "print(evenNumbers)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<map object at 0x0000026DC821F280>\n"
-     ]
-    }
-   ],
    "source": [
-    "li = [1,2,3,4,5,6,7,8,9,10]\n",
-    "squaredNumbers = map(lambda x: x**2, li)\n",
-    "print(squaredNumbers)"
+    "Write a program which can map() to make a list whose elements are square of elements in [1,2,3,4,5,6,7,8,9,10]."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 4, 6, 6, 6, 9, 9, 9, 9, 9]\n"
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
      ]
     }
    ],
    "source": [
-    "from functools import reduce\n",
-    "a = [3, 4, 6, 2, 1, 9, 0, 7, 5, 8]\n",
-    "results_custom = reduce(lambda acc, x: acc + [max(x, acc[-1])], a[1:], [a[0]])\n",
-    "print(results_custom)"
+    "lst = [1,2,3,4,5,6,7,8,9,10]\n",
+    "squNumbers = list(map(lambda x: x**2, lst))\n",
+    "print(squNumbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program which can map() and filter() to make a list whose elements are square of even number in [1,2,3,4,5,6,7,8,9,10]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1,2,3,4,5,6,7,8,9,10]\n",
+    "evenNumbers = list(map(lambda x: x**2, filter(lambda x: x%2==0, lst)))\n",
+    "print(evenNumbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program which can filter() to make a list whose elements are even number between 1 and 20 (both included)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "evenNumbers = filter(lambda x: x%2==0, range(1,21))\n",
+    "print(list(evenNumbers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program which can map() to make a list whose elements are square of numbers between 1 and 20 (both included)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361, 400]\n"
+     ]
+    }
+   ],
+   "source": [
+    "evenNumbers = map(lambda x: x**2, range(1,21))\n",
+    "print(list(evenNumbers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a class named American which has a static method called printNationality."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "America\n",
+      "America\n"
+     ]
+    }
+   ],
+   "source": [
+    "class American(object):\n",
+    "    @staticmethod\n",
+    "    def printNationality():\n",
+    "        print('America')\n",
+    "\n",
+    "anAmerican = American()\n",
+    "anAmerican.printNationality()\n",
+    "American.printNationality()"
    ]
   }
  ],
