--- a/Python-Fundamentsal/python-main-topic.ipynb
+++ b/Python-Fundamentsal/python-main-topic.ipynb
@@ -171,8 +171,6 @@
    "source": [
     "What are Iterators in Python?\n",
     "---\n",
-    "In Python, an iterator is an object that allows you to iterate over collections of data, such as lists, tuples, dictionaries, and sets.\n",
-    "\n",
     "python me iterator ek object jo ki allow karta hai collection of data p iterate karna jaise ki list, tuples,dict, aur sets.malab jitne bhi mutable type of data hai.<br>\n",
     "python ka iterators ek well-established structure internally implement karta hai for iteration jise hum iterator protocol kehte hai.<br>\n",
     "python ka object  jab do iterator protocol ko collectively implement karta hai to us object ko iterator consider karte hai aur un special methods ko iterator protocol kehte hai.<br>\n",
@@ -473,6 +471,15 @@
     "---\n",
     "python me everything object hai jo ki methods ya fir any data types.<br>\n",
     "class ek bluprint hai object constructor ka jha p hum object banate hai."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is Namespaces in Python?\n",
+    "---\n",
+    "Namespace python me ek container ki tarah hai jo ki hold karti hai identifiers(name of variables, functions,classes etc) aur usko uske objects ke name ke hisab se map karti hai.Ye ek tarah se boundry ki tarah kaam karti hai jisse ki name unique rahe aur koi bhi conflict naa ho."
    ]
   }
  ],
