--- a/100+Python-challenging-programming-exercises/51-60.ipynb
+++ b/100+Python-challenging-programming-exercises/51-60.ipynb
@@ -65,6 +65,78 @@
     "aCircle = circle(2)\n",
     "print(aCircle.area())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a class named Rectangle which can be constructed by a length and width. The Rectangle class has a method which can compute the area."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class rectangle(object):\n",
+    "    def __init__(self,l,w):\n",
+    "        self.length = l\n",
+    "        self.width = w \n",
+    "    def area(self):\n",
+    "        return self.length*self.width\n",
+    "aArea = rectangle(2,10)\n",
+    "print(aArea.area())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a class named Shape and its subclass Square. The Square class has an init function which takes a length as argument. Both classes have a area function which can print the area of the shape where Shape's area is 0 by default."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Shape(object):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def area(self):\n",
+    "        return 0\n",
+    "\n",
+    "class Square(Shape):\n",
+    "    def __init__(self, l):\n",
+    "        Shape.__init__(self)\n",
+    "        self.length = l\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.length*self.length\n",
+    "\n",
+    "aSquare= Square(3)\n",
+    "print(aSquare.area())\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
