--- a/100+Python-challenging-programming-exercises/51-60.ipynb
+++ b/100+Python-challenging-programming-exercises/51-60.ipynb
@@ -137,6 +137,91 @@
     "print(aSquare.area())\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please raise a RuntimeError exception."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "something wrong",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msomething wrong\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: something wrong"
+     ]
+    }
+   ],
+   "source": [
+    "raise RuntimeError('something wrong')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function to compute 5/0 and use try/except to catch the exceptions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division by zero\n",
+      "In finally block for cleanup\n"
+     ]
+    }
+   ],
+   "source": [
+    "def throws():\n",
+    "    return 5/0\n",
+    "try: \n",
+    "    throws()\n",
+    "except ZeroDivisionError:\n",
+    "    print('division by zero')\n",
+    "except Exception as err:\n",
+    "    print('caught an exception')\n",
+    "finally:\n",
+    "    print('In finally block for cleanup')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry ! You are dividing by zero \n"
+     ]
+    }
+   ],
+   "source": [
+    "def com(x,y):\n",
+    "    try:\n",
+    "        result = x/y\n",
+    "        print(result)\n",
+    "    except:\n",
+    "        print(\"Sorry ! You are dividing by zero \")\n",
+    "com(5,0)"
+   ]
   }
  ],
  "metadata": {
