--- a/100+Python-challenging-programming-exercises/51-60.ipynb
+++ b/100+Python-challenging-programming-exercises/51-60.ipynb
@@ -222,6 +222,143 @@
     "        print(\"Sorry ! You are dividing by zero \")\n",
     "com(5,0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a custom exception class which takes a string message as attribute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "something wrong\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyError(Exception):\n",
+    "    \"\"\"My own exception class\n",
+    "\n",
+    "    Attributes:\n",
+    "        msg  -- explanation of the error\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, msg):\n",
+    "        self.msg = msg\n",
+    "\n",
+    "error = MyError(\"something wrong\")\n",
+    "print(error)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assuming that we have some email addresses in the \"username@companyname.com\" format, please write program to print the user name of a given email address. Both user names and company names are composed of letters only."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rahulpandit0011b\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "emailAddress = input()\n",
+    "pat2 = \"(\\w+)@((\\w+\\.)+(com))\"\n",
+    "r2 = re.match(pat2,emailAddress)\n",
+    "print(r2.group(1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assuming that we have some email addresses in the \"username@companyname.com\" format, please write program to print the company name of a given email address. Both user names and company names are composed of letters only."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gmail\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "emailAddress = input()\n",
+    "pat2 = \"(\\w+)@(\\w+)\\.(com)\"\n",
+    "r2 = re.match(pat2,emailAddress)\n",
+    "print(r2.group(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program which accepts a sequence of words separated by whitespace as input to print the words composed of digits only."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2', '3']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "seq_word = input()\n",
+    "x = re.findall('[2,3]',seq_word)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2', '3']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "s = input()\n",
+    "print(re.findall(\"\\d+\",s)) #Returns a match where the string contains digits (numbers from 0-9)"
+   ]
   }
  ],
  "metadata": {
