--- a/100+Python-challenging-programming-exercises/61-70.ipynb
+++ b/100+Python-challenging-programming-exercises/61-70.ipynb
@@ -130,6 +130,73 @@
     "n=int(input())\n",
     "print(f(n))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Fibonacci Sequence is computed based on the following formula:\n",
+    "\n",
+    "f(n)=0 if n=0 f(n)=1 if n=1 f(n)=f(n-1)+f(n-2) if n>1\n",
+    "\n",
+    "Please write a program to compute the value of f(n) with a given n input by console."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(n):\n",
+    "    if n == 0: return 0\n",
+    "    if n == 1: return 1\n",
+    "    if n > 1: return f(n - 1) + f(n - 2)\n",
+    "n = int(input())\n",
+    "print(f(n))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Fibonacci Sequence is computed based on the following formula:\n",
+    "\n",
+    "f(n)=0 if n=0 f(n)=1 if n=1 f(n)=f(n-1)+f(n-2) if n>1\n",
+    "\n",
+    "Please write a program using list comprehension to print the Fibonacci Sequence in comma separated form with a given n input by console."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,1,2,3,5,8,13\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(n):\n",
+    "    if n == 0: return 0\n",
+    "    if n == 1: return 1\n",
+    "    if n > 1: return f(n - 1) + f(n - 2)\n",
+    "n = int(input())\n",
+    "values = [str(f(x)) for x in range(1,n+1)]\n",
+    "print(','.join(values))"
+   ]
   }
  ],
  "metadata": {
