--- a/LeetCode_Python/1.TwoSum.ipynb
+++ b/LeetCode_Python/1.TwoSum.ipynb
@@ -43,6 +43,21 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "1. first store the length of variable in another variable\n",
+    "2. start the for loop till -1\n",
+    "3. star the j loop till n\n",
+    "4. then we check if num[i] + num[j] == target\n",
+    "5. if yes we return the i and j"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
