--- a/LeetCode_Python/13.RomanToInteger.ipynb
+++ b/LeetCode_Python/13.RomanToInteger.ipynb
@@ -55,26 +55,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
     "    def romanToInt(self, s: str) -> int:\n",
-    "        roman = {'I':1,'V':5,'X':10,'L':50,'C':100,'D':500,'M':1000,'IV':4,'IX':9,'XL':40,'XC':90,'CD':400,'CM':900}\n",
+    "        rm = {'I':1,'V':5,'X':10,'L':50,'C':100,'D':500,'M':1000,'IV':4,'IX':9,'XL':40,'XC':90,'CD':400,'CM':900}\n",
     "        ans = 0\n",
     "        for i in range(len(s)):\n",
-    "            if i < len(s) - 1 and roman[s[i]] < roman[s[i+1]]:\n",
-    "                ans -= roman[s[i]] \n",
+    "            if i < len(s) - 1 and rm[s[i]] < rm[s[i+1]]:\n",
+    "                ans -= rm[s[i]] \n",
     "            else:\n",
-    "                ans += roman[s[i]]\n",
+    "                ans += rm[s[i]]\n",
     "        return ans       "
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
